--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,14 +4,65 @@ body {
     padding: 0;
 }
 
-.mainBody {
-    background-color: pink;
-    height: 200px;
-    width: 300px;
+.main-body {
+    display: inline-flex;
 }
 
-.nav-bar {
-    background-color: bisque;
+.main-body div {
+    margin: 10px;
+}
+
+.border {
+    border-style: solid;    
+    border-width: 1px;
+    border-color: #ccc;
+}
+
+.block-header {
+    background: #E9E8E3 ;
+    width: 100%;  
+}
+
+#search-box {
+    height: 600px;
+    width: 1000px;
+    overflow: auto;
+}
+
+#nav-bar-1 {
+
     width: 100%;
     height: 30px;
+    background: transparent linear-gradient(180deg, #C8BEBD 0%, #ACA4A3 98%, #645F5F 100%) 0% 0% no-repeat padding-box;
+    opacity: 1;
+    display: inline-flex;
+}
+
+#welcome-msg {
+    margin-left: 10px;
+    margin-top: 5px;
+    font: Bold 12px/16px Segoe UI;
+    letter-spacing: 0;
+    color: #333333;
+    opacity: 1;
+}
+
+#nav-bar-2 {
+    background-color: #C8BEBD;
+    width: 100%;
+    height: 50px;
+    display: inline-flex;
+}
+
+.annoucement, .personal-booking {
+    height: 50px;
+    width: 400px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ccc;
+}
+
+#logout-button {
+    position: absolute;
+    right: 5px;
 }
