--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@ body {
 .block-header {
     background: #E9E8E3 ;
     width: 100%;  
+    padding: 0px 0px 0px 10px;
 }
 
 #search-box {
@@ -49,7 +50,7 @@ body {
 }
 
 .annoucement, .personal-booking {
-    height: 50px;
+    height: 150px;
     width: 400px;
     border-style: solid;
     border-width: 1px;
