Updated ui and added page link function

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,14 +2,22 @@
 body {
     margin: 0;
     padding: 0;
+    /* font: Bold 12px/16px Segoe UI; */
+    font-family: Segoe UI;
+    font-weight: 600;
 }
 
 .main-body {
     display: inline-flex;
+    width: 100%;
+    color: #362BBD;
 }
 
 .main-body > div {
     margin: 10px;
+    height: -moz-calc(100% - (50px + 30px));
+    height: -webkit-calc(100% - (50px + 30px));
+    height: calc(100% - (50px + 30px));
 }
 
 .block-header {
@@ -19,8 +27,8 @@ body {
 }
 
 #search-box {
-    height: 600px;
-    width: 1000px;
+    height: calc(100% - 10px);
+    width: 50%;
     overflow: auto;
 }
 
@@ -31,12 +39,13 @@ body {
     background: transparent linear-gradient(180deg, #C8BEBD 0%, #ACA4A3 98%, #645F5F 100%) 0% 0% no-repeat padding-box;
     opacity: 1;
     display: inline-flex;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 5px;
 }
 
 #welcome-msg {
     margin-left: 10px;
-    margin-top: 5px;
-    font: Bold 12px/16px Segoe UI;
     letter-spacing: 0;
     color: #333333;
     opacity: 1;
@@ -46,7 +55,9 @@ body {
     background-color: #C8BEBD;
     width: 100%;
     height: 50px;
-    display: inline-flex;
+    display: inline-flex;    
+    line-height: 50px;
+    text-align: center;
 }
 
 .annoucement, .personal-booking {
@@ -60,6 +71,18 @@ body {
 #logout-button {
     position: absolute;
     right: 5px;
+}
+
+#search-button {
+    margin-left: 80%;
+
+}
+
+.btn-outline-primary {
+    color: #362BBD;
+    border-color: #362BBD;
+    font-family: Segoe UI;
+    font-weight: 600;
 }
 
 
