--- a/Trial 1/stylesheet.css
+++ b/Trial 1/stylesheet.css
@@ -79,10 +79,11 @@ body {
 
 .annoucement, .personal-booking {
     height: 150px;
-    width: 400px;
+    width: 600px;
     border-style: solid;
     border-width: 1px;
     border-color: #ccc;
+    font-size: 20px;
 }
 
 #logout-button {
