--- a/Trial 2/stylesheet.css
+++ b/Trial 2/stylesheet.css
@@ -79,10 +79,31 @@ body {
 
 .annoucement, .personal-booking {
     height: 150px;
-    width: 400px;
+    width: 600px;
     border-style: solid;
     border-width: 1px;
     border-color: #ccc;
+    font-size: 20px;
+}
+
+#description {
+    margin: 150px auto;
+    height: 400px;
+    width: 50%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ccc;
+    padding: 30px;
+    font-size: 40px;
+}
+
+#description > p {
+    text-align: center;
+}
+
+
+.taskButton {
+    margin-left: 80%;
 }
 
 #logout-button {
@@ -92,7 +113,6 @@ body {
 
 #search-button {
     margin-left: 80%;
-
 }
 
 .btn-outline-primary {
