--- a/Trial 5/stylesheet.css
+++ b/Trial 5/stylesheet.css
@@ -32,6 +32,14 @@ body {
     width: 973px;
     overflow: auto;
 }
+#type-dropdown-list > option, #location-dropdown-list > option {
+    font-size: 20px;
+}
+
+#Room-options option {
+    font-size: 20px;
+}
+
 
 .checkbox-list {
     display: inline-flex;
