--- a/Trial 6/stylesheet.css
+++ b/Trial 6/stylesheet.css
@@ -32,6 +32,14 @@ body {
     width: 973px;
     overflow: auto;
 }
+#type-dropdown-list > option, #location-dropdown-list > option {
+    font-size: 20px;
+}
+
+#Room-options option {
+    font-size: 20px;
+}
+
 
 .checkbox-list {
     display: inline-flex;
@@ -79,10 +87,30 @@ body {
 
 .annoucement, .personal-booking {
     height: 150px;
-    width: 400px;
+    width: 600px;
     border-style: solid;
     border-width: 1px;
     border-color: #ccc;
+    font-size: 20px;
+}
+
+#description {
+    margin: 150px auto;
+    height: 400px;
+    width: 50%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ccc;
+    padding: 30px;
+    font-size: 40px;
+}
+
+#description > p {
+    text-align: center;
+}
+
+.taskButton {
+    margin-left: 80%;
 }
 
 #logout-button {
