updated option size for 2.1

--- a/arrangement2.1/Trial 6/stylesheet.css
+++ b/arrangement2.1/Trial 6/stylesheet.css
@@ -33,11 +33,14 @@ body {
     overflow: auto;
 }
 #type-dropdown-list > option, #location-dropdown-list > option {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #Room-options option {
-    font-size: 20px;
+    font-size: 28px;
+}
+.form-control {
+    height: 3rem;   
 }
 
 
