--- a/arrangement2.1/Trial 7/stylesheet.css
+++ b/arrangement2.1/Trial 7/stylesheet.css
@@ -33,11 +33,11 @@ body {
     overflow: auto;
 }
 #type-dropdown-list > option, #location-dropdown-list > option {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #Room-options option {
-    font-size: 20px;
+    font-size: 28px;
 }
 
 
@@ -48,6 +48,10 @@ body {
 
 #Room-options {
     flex-wrap: wrap;
+}
+
+.form-control {
+    height: 3rem;   
 }
 
 .custom-checkbox {
