--- a/arrangement2.1/Trial 4/stylesheet.css
+++ b/arrangement2.1/Trial 4/stylesheet.css
@@ -29,9 +29,24 @@ body {
 
 #search-box {
     height: calc(100% - 10px);
-    width: 973px;
+    width: 1053px;
     overflow: auto;
 }
+
+#search-box  p{
+    margin: .2rem;
+}
+
+hr {
+    margin: .3rem;
+}
+
+.custom-control-label, .custom-control-label::before, .custom-control-label::after {
+    padding-left: 10px;
+    padding-top: 15px;
+    font-size: 18px;
+}
+
 
 .checkbox-list {
     display: inline-flex;
@@ -43,8 +58,8 @@ body {
 }
 
 .custom-checkbox {
-    height: 58px;
-    width: 192px;
+    height: 70px;
+    width: 220px;
     border-style: solid;
     border-width: 1px;
     border-color: #ccc;
